--- a/index.css
+++ b/index.css
@@ -2,13 +2,12 @@ body {
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    min-width: 400px;
+    min-width: 100px;
 }
-
 button {
-    background: #5f9341;
+    background: #2cad6d;
     color: white;
     padding: 10px 20px;
-    border: 1px solid #5f9341;
+    border: 1px solid #2cad6d;
     font-weight: bold;
 }
